--- a/Views/Admin/edit-category.ejs
+++ b/Views/Admin/edit-category.ejs
@@ -27,7 +27,7 @@
       </div>
     </div>
     <div class="images d-flex justify-content-start">
-      <input type="file" name="main" accept="image/*" id="main" required
+      <input type="file" name="main" accept="image/*" id="main" 
       onchange="previewImage('main', 'mn')">
       <label for="main">
 
