--- a/Views/User/home.ejs
+++ b/Views/User/home.ejs
@@ -7,6 +7,63 @@
 <body id="body">
     <%-include('../partials/header')-%>
     <%-include('../partials/slider')-%>
+    <div class="TopSelling" style="width: 1236.75px; height: 623.83px; position: relative">
+        <div class="Rectangle10" style="width: 1236.75px; height: 623.83px; left: 0px; top: 0px; position: absolute; background: #F0F0F0; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 15px"></div>
+        <div class="TopProducts" style="left: 82.26px; top: 57.08px; position: absolute; color: #0A183D; font-size: 35px; font-family: Poppins; font-weight: 600; word-wrap: break-word">Top Products</div>
+        <div class="ProductCard" style="width: 319.42px; height: 397.32px; left: 82.61px; top: 164.41px; position: absolute">
+          <div class="Rectangle22" style="width: 319.42px; height: 397.32px; left: 0px; top: 0px; position: absolute; background: white; border-radius: 20px"></div>
+          <div class="Pruduct" style="width: 267px; height: 121.82px; left: 31.29px; top: 267.59px; position: absolute">
+            <div class="BowersWilkinsPx7S2" style="left: 0px; top: 0px; position: absolute; color: #646464; font-size: 22px; font-family: Poppins; font-weight: 700; word-wrap: break-word">Bowers & Wilkins Px7 S2</div>
+            <div class="MRP3299928999" style="left: 61.05px; top: 28.99px; position: absolute; text-align: center"><span style="color: #646464; font-size: 18px; font-family: Poppins; font-weight: 600; word-wrap: break-word">M.R.P: ₹32,999<br/></span><span style="color: black; font-size: 22px; font-family: Poppins; font-weight: 600; word-wrap: break-word"> </span><span style="color: rgba(255, 3.61, 3.61, 0.80); font-size: 22px; font-family: Poppins; font-weight: 600; word-wrap: break-word">₹28,999/-</span></div>
+            <div class="Rating" style="width: 51.32px; height: 29px; left: 97.99px; top: 93px; position: absolute">
+              <div class="3" style="left: -0px; top: 2px; position: absolute; color: rgba(100, 100, 100, 0.80); font-size: 18px; font-family: Poppins; font-weight: 600; word-wrap: break-word">4.3</div>
+              <div class="IonStar" style="width: 27.07px; height: 27.82px; left: 24.26px; top: 0.04px; position: absolute">
+                <div class="Vector" style="width: 15.19px; height: 15px; left: 5.95px; top: 7.50px; position: absolute; background: rgba(255, 215, 0, 0.80); border-radius: 14px"></div>
+              </div>
+            </div>
+            <div class="Vector1" style="width: 66px; height: 0px; left: 87.68px; top: 7.09px; position: absolute; border-radius: 14px; border: 1px solid"></div>
+          </div>
+          <div class="Line1" style="width: 79px; height: 0px; left: 147.23px; top: 310.59px; position: absolute; border: 1px #4B4B4B solid"></div>
+          <div class="PhHeart" style="width: 50px; height: 50px; left: 259.23px; top: 12.59px; position: absolute">
+            <div class="Vector" style="width: 43.75px; height: 37.49px; left: 3.12px; top: 6.25px; position: absolute; background: #FF0000"></div>
+          </div>
+        </div>
+        <div class="ProductCard" style="width: 319.42px; height: 397.32px; left: 454.34px; top: 165.10px; position: absolute">
+          <div class="Rectangle22" style="width: 319.42px; height: 397.32px; left: 0px; top: 0px; position: absolute; background: white; border-radius: 20px"></div>
+          <div class="Pruduct" style="width: 215px; height: 120.51px; left: 55.57px; top: 266.90px; position: absolute">
+            <div class="SonyWh1000xm5" style="left: 0px; top: 0px; position: absolute; color: #646464; font-size: 22px; font-family: Poppins; font-weight: 700; word-wrap: break-word">Sony WH-1000XM5</div>
+            <div class="MRP3499929999" style="width: 142.46px; height: 69px; left: 32.92px; top: 29.31px; position: absolute; text-align: center"><span style="color: rgba(0, 0, 0, 0.60); font-size: 18px; font-family: Poppins; font-weight: 600; word-wrap: break-word">M.R.P: ₹34,999<br/></span><span style="color: black; font-size: 22px; font-family: Poppins; font-weight: 600; word-wrap: break-word"> </span><span style="color: rgba(255, 0, 0, 0.80); font-size: 22px; font-family: Poppins; font-weight: 600; word-wrap: break-word">₹29,999/-</span></div>
+            <div class="Rating" style="width: 54.89px; height: 31.16px; left: 68.42px; top: 89.48px; position: absolute">
+              <div class="5" style="width: 32.28px; height: 30.05px; left: -0px; top: 1.11px; position: absolute; color: rgba(100, 100, 100, 0.80); font-size: 18px; font-family: Poppins; font-weight: 600; word-wrap: break-word">4.5</div>
+              <div class="IonStar" style="width: 27.07px; height: 27.82px; left: 27.82px; top: 0.05px; position: absolute">
+                <div class="Vector" style="width: 15.19px; height: 15px; left: 5.95px; top: 7.50px; position: absolute; background: rgba(255, 215, 0, 0.80); border-radius: 14px"></div>
+              </div>
+            </div>
+            <div class="Line1" style="width: 90.15px; height: 0px; left: 94.11px; top: 42.78px; position: absolute; border: 1px black solid"></div>
+          </div>
+          <div class="PhHeart" style="width: 50px; height: 50px; left: 259.51px; top: 12.90px; position: absolute">
+            <div class="Vector" style="width: 43.75px; height: 37.49px; left: 3.12px; top: 6.25px; position: absolute; background: #FF0000"></div>
+          </div>
+        </div>
+        <div class="ProductCard" style="width: 319.42px; height: 397.32px; left: 826.05px; top: 170.24px; position: absolute">
+          <div class="Rectangle22" style="width: 319.42px; height: 397.32px; left: 0px; top: 0px; position: absolute; background: white; border-radius: 20px"></div>
+          <div class="Pruduct" style="width: 304px; height: 124.40px; left: 7.85px; top: 259.76px; position: absolute">
+            <div class="AudioTechnicaAthM20xbt" style="left: 0px; top: 0px; position: absolute; color: #646464; font-size: 20px; font-family: Poppins; font-weight: 700; word-wrap: break-word">Audio-Technica ATH-M20xBT</div>
+            <div class="MRP109996499" style="width: 129.10px; height: 69px; left: 86.22px; top: 29.78px; position: absolute; text-align: center"><span style="color: rgba(0, 0, 0, 0.60); font-size: 18px; font-family: Poppins; font-weight: 600; word-wrap: break-word">M.R.P: ₹10,999<br/></span><span style="color: black; font-size: 22px; font-family: Poppins; font-weight: 600; word-wrap: break-word"> </span><span style="color: #FF3636; font-size: 22px; font-family: Poppins; font-weight: 600; word-wrap: break-word">₹6,499/-</span></div>
+            <div class="Rating" style="width: 50.33px; height: 28px; left: 120.71px; top: 96.62px; position: absolute">
+              <div class="5" style="left: -0px; top: 1px; position: absolute; color: rgba(100, 100, 100, 0.80); font-size: 18px; font-family: Poppins; font-weight: 600; word-wrap: break-word">4.5</div>
+              <div class="IonStar" style="width: 27.07px; height: 27.82px; left: 23.26px; top: 0.04px; position: absolute">
+                <div class="Vector" style="width: 15.19px; height: 15px; left: 5.95px; top: 7.50px; position: absolute; background: rgba(255, 215, 0, 0.80); border-radius: 14px"></div>
+              </div>
+            </div>
+            <div class="Line1" style="width: 90.15px; height: 0px; left: 144.06px; top: 45.47px; position: absolute; border: 1px black solid"></div>
+          </div>
+          <div class="PhHeart" style="width: 50px; height: 50px; left: 258.79px; top: 12.76px; position: absolute">
+            <div class="Vector" style="width: 43.75px; height: 37.49px; left: 3.12px; top: 6.25px; position: absolute; background: #FF0000"></div>
+          </div>
+        </div>
+        <div class="SeeMore" style="left: 1070.85px; top: 36px; position: absolute; text-align: center; color: #0A183D; font-size: 24px; font-family: Poppins; font-weight: 600; word-wrap: break-word">see more ></div>
+      </div>
     <%-include('../partials/footer')-%>
     <%-include('../layout/footer')-%>
 
