--- a/Views/User/index.ejs
+++ b/Views/User/index.ejs
@@ -79,4 +79,9 @@
     }
   </style>
   <script src="/static/js/login.js"></script>
+  <script>
+    function validCheck(){
+      
+    }
+  </script>
 <%-include('../layout/footer')-%>
