--- a/Public/css/Style.css
+++ b/Public/css/Style.css
@@ -1,11 +1,11 @@
-*{
+/* *{
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Poppins', sans-serif; */
     /* overflow: hidden; */
 
-	
+/* 	
 }
 input[type="text"], input[type="password"], textarea, select { 
     outline: none;
@@ -25,7 +25,7 @@ body{
 	left: 0;
 	height: 100%;
 	z-index: -1;
-}
+} */
 
 /* .container{
     width: 100vw;
@@ -36,7 +36,7 @@ body{
     padding: 0 2rem;
 } */
 
-.img{
+/* .img{
     padding-top: 150px;
 	display: flex;
 	justify-content: flex-start;
@@ -232,4 +232,4 @@ a:hover{
 	.login-content{
 		justify-content: center;
 	}
-}
+} */
