--- a/Views/User/cart.ejs
+++ b/Views/User/cart.ejs
@@ -27,7 +27,7 @@
                                 <img src="/static/images/img-bg.jpg" class="w-100" />
                                 <a href="#!">
                                   <div class="hover-overlay">
-                                    <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
+                                    <div class=" " style="background-color: rgba(253, 253, 253, 0.15);"></div>
                                   </div>
                                 </a>
                               </div>
